SODEV-27623 - feat: Java 11 Certification